# rusty-book-manager

./: .dockerignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  compose.yaml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
adapter/: Cargo.toml
adapter/migrations/: 20241014020025_start.down.sql  20241014020025_start.up.sql
adapter/src/database/: mod.rs
adapter/src/database/model/: auth.rs  book.rs  checkout.rs  user.rs
adapter/src/redis/: mod.rs  model.rs
adapter/src/repository/: auth.rs  book.rs  checkout.rs  user.rs
adapter/src/repository/fixtures/: book.sql  common.sql
api/: Cargo.toml
api/src/: extractor.rs  openapi.rs
api/src/handler/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
api/src/model/: auth.rs  book.rs  checkout.rs  mod.rs  user.rs
api/src/route/: auth.rs  book.rs  health.rs  user.rs  v1.rs
api/tests/api/: book.rs  helper.rs
data/: initial_setup.sql
kernel/: Cargo.toml
kernel/src/model/: id.rs
kernel/src/model/book/: mod.rs
kernel/src/model/checkout/: mod.rs
kernel/src/repository/: auth.rs  book.rs  checkout.rs  user.rs
registry/src/: lib.rs
shared/: Cargo.toml
shared/src/: config.rs  env.rs  error.rs
src/: main.rs
