[package]
name = "rusty-book-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "kernel", "adapter", "shared", "registry"]

[workspace.package]
edition = "2021"
publish = false
license = "MIT"

[workspace.dependencies]
adapter = { path = "./adapter" }
api = { path = "./api" }
kernel = { path = "./kernel" }
shared = { path = "./shared" }
registry = { path = "./registry" }
async-trait = "0.1.84"
anyhow = { version = "1.0.95", default-features = false }
axum = { version = "0.7.9", features = ["http1", "json", "query", "tokio"], default-features = false }
derive-new = { version = "0.7.0", default-features = false }
uuid = { version = "1.11.0", features = ["serde", "v4"], default-features = false }
chrono = { version = "0.4.39", default-features = false, features = ["serde"] }
serde = { version = "1.0.217", default-features = false }
sqlx = { version = "0.8.3", default-features = false, features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio", "uuid"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "signal"] }
mockall = "0.13.1"
redis = { version = "0.27.6", features = ["tokio-comp", "tokio-rustls"], default-features = false }
bcrypt = { version = "0.16.0", features = ["std"], default-features = false }
tower = { version = "0.5.2", features = ["util"], default-features = false }
tracing = { version = "0.1.41", default-features = false }
axum-extra = { version = "0.9.6", features = ["typed-header"], default-features = false }
tokio-stream = { version = "0.1.17", default-features = false }
garde = { version = "0.21.0", features = ["derive", "email"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"], default-features = false }
utoipa = { version = "5.3.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-redoc = { version = "5.0.0", features = ["axum"] }

[dependencies]
tower-http.workspace = true
adapter.workspace = true
api.workspace = true
registry.workspace = true
shared.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-redoc.workspace = true

[profile.dev.package.sqlx-macros]
opt-level = 3
