[package]
name = "rusty-book-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "kernel", "adapter", "shared", "registry"]

[workspace.package]
edition = "2024"
publish = false
license = "MIT"

[workspace.dependencies]
adapter = { path = "./adapter" }
api = { path = "./api" }
kernel = { path = "./kernel" }
shared = { path = "./shared" }
registry = { path = "./registry" }
async-trait = { version = "0.1.88" }
anyhow = { version = "1.0.98", default-features = false }
axum = { version = "0.8.4", features = ["http1", "json", "query", "tokio"], default-features = false }
derive-new = { version = "0.7.0", default-features = false }
uuid = { version = "1.17.0", features = ["serde", "v4"], default-features = false }
chrono = { version = "0.4.41", default-features = false, features = ["serde"] }
serde = { version = "1.0.219", default-features = false }
sqlx = { version = "0.8.5", default-features = false, features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio", "uuid"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = { version = "2.0.12", default-features = false }
tokio = { version = "1.45.0", features = ["rt-multi-thread", "signal"] }
mockall = "0.13.1"
redis = { version = "0.30.0", features = ["tokio-comp"], default-features = false }
bcrypt = { version = "0.17.0", features = ["std"], default-features = false }
tower = "0.5.2"
tracing = { version = "0.1.41", default-features = false }
axum-extra = { version = "0.10.1", features = ["typed-header"], default-features = false }
tokio-stream = { version = "0.1.17", default-features = false }
garde = { version = "0.22.0", features = ["derive", "email"] }
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"], default-features = false }
utoipa = { version = "5.3.1", features = ["chrono", "uuid"], default-features = false }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
tracing-opentelemetry = { version = "0.30.0", default-features = false }
opentelemetry = { version = "0.29.1", default-features = false }
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic", "trace"], default-features = false }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"], default-features = false }
opentelemetry-semantic-conventions = { version = "0.29.0", features = ["semconv_experimental"] }

[dependencies]
tower-http.workspace = true
adapter.workspace = true
api.workspace = true
registry.workspace = true
shared.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-redoc.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
tracing-opentelemetry.workspace = true

[profile.dev.package.sqlx-macros]
opt-level = 3
