[package]
name = "rusty-book-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "kernel", "adapter", "shared", "registry"]

[workspace.package]
edition = "2024"
publish = false
license = "MIT"

[workspace.dependencies]
adapter = { path = "./adapter" }
api = { path = "./api" }
kernel = { path = "./kernel" }
shared = { path = "./shared" }
registry = { path = "./registry" }
async-trait = { version = "0.1.89" }
anyhow = { version = "1.0.100", default-features = false }
axum = { version = "0.8.7", features = ["http1", "json", "query", "tokio"], default-features = false }
derive-new = { version = "0.7.0", default-features = false }
uuid = { version = "1.19.0", features = ["serde", "v4"], default-features = false }
chrono = { version = "0.4.42", default-features = false, features = ["serde"] }
serde = { version = "1.0.228", default-features = false }
sqlx = { version = "0.8.6", default-features = false, features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio", "uuid"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = { version = "2.0.17", default-features = false }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "signal"] }
mockall = "0.14.0"
redis = { version = "1.0.1", features = ["tokio-comp"], default-features = false }
bcrypt = { version = "0.17.1", features = ["std"], default-features = false }
tower = "0.5.2"
tracing = { version = "0.1.43", default-features = false }
axum-extra = { version = "0.12.2", features = ["typed-header"], default-features = false }
tokio-stream = { version = "0.1.17", default-features = false }
garde = { version = "0.22.1", features = ["derive", "email"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"], default-features = false }
utoipa = { version = "5.4.0", features = ["chrono", "uuid"], default-features = false }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
tracing-opentelemetry = { version = "0.32.0", default-features = false }
opentelemetry = { version = "0.31.0", default-features = false }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "trace"], default-features = false }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"], default-features = false }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }

[dependencies]
tower-http.workspace = true
adapter.workspace = true
api.workspace = true
registry.workspace = true
shared.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-redoc.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
tracing-opentelemetry.workspace = true

[profile.dev.package.sqlx-macros]
opt-level = 3
