[package]
name = "api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
kernel.workspace = true
shared.workspace = true
registry.workspace = true
axum.workspace = true
derive-new.workspace = true
serde.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
tower.workspace = true
strum.workspace = true
axum-extra.workspace = true
tokio-stream.workspace = true
garde.workspace = true
utoipa.workspace = true

[dev-dependencies]
anyhow.workspace = true
rstest = { version = "0.18.2", default-features = false }
serde_json = { version = "1.0.105", default-features = false }
